# FinalYearPoject

TASK/: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.ps1  build.sh  install-opencv-choco.ps1  install_opencv.sh  shadow
TASK/cerium/: CMakeLists.txt  cerium  main.cpp
TASK/cerium/auth/: authentication.hpp
TASK/cerium/core/: cerium.cpp  cerium.hpp
TASK/cerium/utils/: cliutils.hpp  coreutils.hpp  cvutils.hpp  hashutils.hpp
TASK/opencv-choco/: opencv.nuspec
TASK/opencv-choco/tools/: chocolateyuninstall.ps1
